--- a/brendacarpinteria/brendacarpinteria.csproj
+++ b/brendacarpinteria/brendacarpinteria.csproj
@@ -260,7 +260,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Imagenes\" />
     <Folder Include="servicio\" />
   </ItemGroup>
   <ItemGroup>
@@ -291,6 +290,7 @@
     <Resource Include="clave.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Imagenes\cancelar.png" />
     <Content Include="usuario.png" />
     <Resource Include="usuario2.png" />
   </ItemGroup>
